# edit-distance

./: .gitignore  .pylintrc  .travis.yml  CHANGES.txt  MANIFEST  Makefile  README.md  README.txt  codecov.yml  edit_distance.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  index.rst
edit_distance/: __init__.py  code.py  edit_distance.py
editdistance/: editdistance.py
test/: speed.py  test.py  test_edit_distance.py  test_long_sequences.py  test_properties.py
