[project]
name = "edit-distance"
dynamic = ["version"]
description = "Computing edit distance on arbitrary Python sequences"
authors = [{ name = "Ben Lambert", email = "blambert@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["edit", "distance", "editdistance", "levenshtein"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/belambert/edit-distance"
Repository = "https://github.com/belambert/edit-distance"
Documentation = "https://edit-distance.readthedocs.io/"

[project.scripts]
edit-distance = "edit_distance.edit_distance:main"

[dependency-groups]
dev = [
    "black>=25.9.0,<26",
    "coverage>=7.10.7,<8",
    "pylint>=3.3.8,<4",
    "mypy>=1.18.2,<3",
    "pytest>=8.4.2,<9",
    "pytest-cov>=7.0.0,<8",
    "unittest-xml-reporting>=3.2.0,<5",
    "isort>=6.0.1,<7",
    "pyupgrade>=3.15.0,<4",
    "hypothesis>=6",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# version is derived from the git tag, so a release never needs a manual bump
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["edit_distance"]

[tool.pylint."messages control"]
disable = [
    "invalid-name",
    "broad-exception-raised",
    "too-many-arguments",
    "too-many-locals",
    "missing-module-docstring",
    "unused-argument",
    "unspecified-encoding"
]

[tool.pylint.reports]
score = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.coverage.run]
source = ["edit_distance"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
